# ros2_practice_ws

./: .claudeignore  .data  .gitignore  CLAUDE.md
.cache/clangd/index/: QOS_nodePub.cpp.81E3C5270A345D31.idx  QOS_nodeSub.cpp.C001E3164240A20D.idx  a_star_planner.cpp.A804EDAD30C78813.idx  a_star_planner.hpp.7E353FD682DA2005.idx  add_two_ints.cpp.731F0AC5102131AB.idx  add_two_ints_client.cpp.394F7238F73ECF4F.idx  client_robot.cpp.F928301558BAC921.idx  dijkstra_planner.cpp.B8A4FDFEED2A6F90.idx  dijkstra_planner.hpp.6CD2F018E29D18C1.idx  get_transform.hpp.84ED120BE1C96869.idx  get_transform__builder.hpp.6FEB9EDC408DED79.idx  get_transform__struct.hpp.5298D75D0D898E75.idx  get_transform__traits.hpp.D287C76F8A2B6900.idx  get_transform__type_support.hpp.7D2C739C22659A88.idx  hardware_status.cpp.6AECEC3BD5FB2031.idx  hardwarestatus.hpp.A23696B544D8E8D3.idx  hardwarestatus__builder.hpp.538792AFF39B06D7.idx  hardwarestatus__struct.hpp.CEA846A604D8641B.idx  hardwarestatus__traits.hpp.F0525D8589BE3839.idx  hardwarestatus__type_support.hpp.EEA04B27E163A5D1.idx  health_monitor_node.cpp.84556188C91C8595.idx  mapping_with_known_poses.cpp.D86F868866D6EA64.idx  mapping_with_known_poses.hpp.A860D7848A5F12AD.idx  my_first_node.cpp.73D708A96828D288.idx  pd_motion_planner.cpp.F20F8BB20EE7F679.idx  pd_motion_planner.hpp.177CC9E6D8323EA0.idx  pure_pursuit.cpp.9C1513127A42B9D7.idx  pure_pursuit.hpp.2511CB07B5A5F3D2.idx  robot_news_int.cpp.6493083DE738F1BA.idx  robot_news_int_pubsub.cpp.94518674C36A7B3B.idx  robot_news_station.cpp.D5E9D43486FA82E6.idx  robot_news_subscriber.cpp.E0DA26068D277A7B.idx  rosidl_generator_cpp__visibility_control.hpp.708571B3A08880DC.idx  safety_stop.cpp.1FD054D883C47883.idx  server_robot.cpp.255B9AB08425371C.idx  simple_controller.cpp.E6ECAD37F67D7D94.idx  simple_controller.hpp.E246A2E80950BD27.idx  simple_lifecycle.cpp.B8FEE166AB1F3218.idx  simple_turtlesim_kinematics.cpp.45E20A0FB3B5ECE7.idx  simple_turtlesim_kinematics.hpp.21D236351B5C2F5B.idx  (+3 more)
src/ballbot_controller/: CMakeLists.txt  package.xml
src/ballbot_controller/ballbot_controller/: simple_controller.py  twist_relay.py
src/ballbot_controller/config/: ballbot_controllers.yaml  joy_config.yaml  joy_teleop.yaml  twist_mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topic.yaml
src/ballbot_controller/include/ballbot_controller/: simple_controller.hpp
src/ballbot_controller/launch/: controller.launch.py  joystick.launch.py  simulated_robot.launch.py
src/ballbot_controller/src/: simple_controller.cpp  twist_relay.cpp
src/ballbot_controller/test/: test_simple_controller.py
src/ballbot_description/: CMakeLists.txt  package.xml
src/ballbot_description/launch/: display.launch.py  gazebo.launch.py
src/ballbot_description/rviz/: display.rviz
src/ballbot_description/urdf/: ballbot.urdf.xacro  ballbot_gazebo.xacro  ballbot_ros2_control.xacro
src/ballbot_health_monitor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ballbot_health_monitor/ballbot_health_monitor/: health_monitor_node.py
src/ballbot_health_monitor/src/: health_monitor_node.cpp
src/ballbot_health_monitor/test/: conftest.py  test_health_monitor_node.py
src/ballbot_localization/: CMakeLists.txt  package.xml
src/ballbot_localization/config/: amcl.yaml
src/ballbot_localization/launch/: global_localization.launch.py
src/ballbot_mapping/: CMakeLists.txt  package.xml
src/ballbot_mapping/ballbot_mapping/: mapping_with_known_poses.py
src/ballbot_mapping/launch/: slam.launch.py
src/ballbot_mapping/src/: mapping_with_known_poses.cpp
src/ballbot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/ballbot_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
src/ballbot_navigation/: CMakeLists.txt  package.xml
src/ballbot_navigation/config/: controller_server.yaml  costmap.yaml  planner.yaml  smoother_server.yaml
src/ballbot_navigation/launch/: costmap.launch.py
src/ballbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/ballbot_planning/ballbot_planning/: a_star_planner.py  dijkstra_planner.py
src/ballbot_planning/include/ballbot_planning/: a_star_planner.hpp  dijkstra_planner.hpp
src/ballbot_planning/launch/: planner.launch.py
src/ballbot_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
src/ballbot_utils/: CMakeLists.txt  package.xml
src/ballbot_utils/src/: safety_stop.cpp
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_two_ints.cpp
src/gp_description/: CMakeLists.txt  package.xml
src/gp_description/config/: joint_names_ballbot_v1.yaml
src/gp_description/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
src/gp_description/meshes/: Sphere.STL  wheel1.STL  wheel2.STL  wheel3.STL
src/gp_description/urdf/: BallBot_V1.csv  ballbot1.urdf.xacro  ballbot1_gazebo.xacro  ballbot1_ros2_control.xacro  ballbot_v1.urdf.xacro
src/mc_tut1/: CMakeLists.txt  package.xml
src/mc_tut1/src/: QOS_nodePub.cpp  QOS_nodeSub.cpp  client_robot.cpp  hardware_status.cpp  my_first_node.cpp  robot_news_int.cpp  robot_news_int_pubsub.cpp  robot_news_station.cpp  robot_news_subscriber.cpp  server_robot.cpp  simple_lifecycle.cpp  simple_turtlesim_kinematics.cpp  tf2_kinematics.cpp
src/my_package_tut1/: package.xml  setup.cfg  setup.py
src/my_package_tut1/my_package_tut1/: hardware_status.py  my_first_node.py  py_servclie_oop.py  py_server_client.py  robot_int.py  robot_news_int.py  robot_news_station.py  simple_QOS.py  simple_QOS_sub.py  simple_lifecycle.py  smartphone.py  turtlesim_kinematics.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: Hardwarestatus.msg
src/prpp_tutorial_cpp/: CMakeLists.txt  package.xml
src/prpp_tutorial_cpp/config/: controllers.yaml
src/prpp_tutorial_cpp/launch/: display.launch.py  display_simple.launch.py  gazebo.launch.py
src/prpp_tutorial_cpp/meshes/: Rotary_link.STL  Y-axis .STL  sliding_base_link.STL  vertical_slide.STL
src/prpp_tutorial_cpp/rviz/: display.rviz
src/prpp_tutorial_cpp/urdf/: Robot_PRPP.csv  Robot_PRPP.urdf.xacro
(+5 files in other folders)
