<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- BUG FIX 17: <n> tag is invalid XML — must be <name> -->
  <name>ballbot_controller</name>
  <version>0.0.0</version>
  <description>Ballbot controller package</description>
  <maintainer email="youssefshemela12@gmail.com">youssef-shemela</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <!-- BUG FIX 18: eigen3 is not the correct ROS package name -->
  <depend>eigen3_cmake_module</depend>

  <!-- BUG FIX 19: Missing runtime dependencies that are actually used -->
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>